help/deploy/aws/cloudformation/templates/create_network.template.yml
#file: noinspection YAMLIncompatibleTypes
AWSTemplateFormatVersion: "2010-09-09"

Description: Datagrok template to deploy all components in new VPC

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Network configuration
        Parameters:
          - CIDR
          - InternetIngressAccess

    #          - InternetEgressAccess
    ParameterLabels:
      CIDR:
        default: 'CIDR: VPC CIDR'
      InternetIngressAccess:
        default: 'InternetIngressAccess: Access from internet'

        #      InternetEgressAccess:
        #        default: "InternetEgressAccess: Access to internet"
  cfn-lint:
    config:
      ignore_checks:
        - W8001
        - W8003

Parameters:
  CIDR:
    Description: CIDR block for the new Datagrok VPC
    Type: String
    Default: 10.0.0.0/17
    AllowedPattern: '[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+/[0-9]+'

  InternetIngressAccess:
    Description: 'Do you want Datagrok to be available from internet? The exact subnet from which Datagrok will be available can be specified in ''InternetSubnetAllow: Allow connect to Datagrok from CIDR'' parameter.'

    #  InternetEgressAccess:
    #    Type: String
    #    Default: 'true'
    #    AllowedValues:
    #      - 'true'
    #      - 'false'
    #    Description: Do you want Datagrok to be able to access internet? The access will be created using NAT Gateway. Either access to the internet from Datagrok or configured proxy are required to install Datagrok packages (https://datagrok.ai/help/develop#packages).
    Type: String
    AllowedValues:
      - "true"
      - "false"
    Default: "true"

Conditions:
  InternetIngressAccess: !Equals
    - !Ref InternetIngressAccess
    - "true"

  InternetEgressAccess: !Equals

    #      - Ref: InternetEgressAccess
    - "true"
    - "true"

  CreatePublicSubnets: !Or
    - !Condition InternetIngressAccess
    - !Condition InternetEgressAccess

  UseVPCEndpoint: !Equals
    - "true"
    - "true"

  CreateVPC: !Equals
    - create
    - create

Resources:
  DatagrokVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref CIDR
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Datagrok VPC
        - Key: datagrok.component
          Value: common

  DatagrokInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Datagrok Internet Gateway
        - Key: datagrok.component
          Value: common
    Condition: CreatePublicSubnets

  DatagrokInternetGatewayAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref DatagrokInternetGateway
      VpcId: !Ref DatagrokVPC
    Condition: CreatePublicSubnets

  DatagrokPublicSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Datagrok Public Subnet Route Table
        - Key: datagrok.component
          Value: common
      VpcId: !Ref DatagrokVPC
    Condition: CreatePublicSubnets

  DatagrokPublicSubnetPublicRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref DatagrokInternetGateway
      RouteTableId: !Ref DatagrokPublicSubnetRouteTable
    Condition: CreatePublicSubnets

  DatagrokPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select
        - 0
        - !Cidr
          - !GetAtt DatagrokVPC.CidrBlock
          - 6
          - 6
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Datagrok Public Subnet 1
        - Key: datagrok.component
          Value: common
      VpcId: !Ref DatagrokVPC
      AvailabilityZone: !Select
        - 0
        - !GetAZs
          Ref: AWS::Region
    Condition: CreatePublicSubnets

  DatagrokPublicSubnetRouteAssos1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref DatagrokPublicSubnetRouteTable
      SubnetId: !Ref DatagrokPublicSubnet1
    Condition: CreatePublicSubnets

  DatagrokPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select
        - 1
        - !Cidr
          - !GetAtt DatagrokVPC.CidrBlock
          - 6
          - 6
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Datagrok Public Subnet 2
        - Key: datagrok.component
          Value: common
      VpcId: !Ref DatagrokVPC
      AvailabilityZone: !Select
        - 1
        - !GetAZs
          Ref: AWS::Region
    Condition: CreatePublicSubnets

  DatagrokPublicSubnetRouteAssos2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref DatagrokPublicSubnetRouteTable
      SubnetId: !Ref DatagrokPublicSubnet2
    Condition: CreatePublicSubnets

  DatagrokNatGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Datagrok Nat Gateway EIP
        - Key: datagrok.component
          Value: common
    Condition: InternetEgressAccess

  DatagrokNatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt DatagrokNatGatewayEIP.AllocationId
      ConnectivityType: public
      SubnetId: !Ref DatagrokPublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Datagrok Nat Gateway
        - Key: datagrok.component
          Value: common
    Condition: InternetEgressAccess

  DatagrokPrivateSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Datagrok Private Subnet Route Table
        - Key: datagrok.component
          Value: common
      VpcId: !Ref DatagrokVPC

  DatagrokPrivateSubnetNatRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref DatagrokNatGateway
      RouteTableId: !Ref DatagrokPrivateSubnetRouteTable
    Condition: InternetEgressAccess

  DatagrokPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select
        - 2
        - !Cidr
          - !GetAtt DatagrokVPC.CidrBlock
          - 6
          - 6
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Datagrok Private Subnet 1
        - Key: datagrok.component
          Value: common
      VpcId: !Ref DatagrokVPC
      AvailabilityZone: !Select
        - 0
        - !GetAZs
          Ref: AWS::Region

  DatagrokPrivateSubnetRouteAssos1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref DatagrokPrivateSubnetRouteTable
      SubnetId: !Ref DatagrokPrivateSubnet1

  DatagrokPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select
        - 3
        - !Cidr
          - !GetAtt DatagrokVPC.CidrBlock
          - 6
          - 6
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Datagrok Private Subnet 2
        - Key: datagrok.component
          Value: common
      VpcId: !Ref DatagrokVPC
      AvailabilityZone: !Select
        - 1
        - !GetAZs
          Ref: AWS::Region

  DatagrokPrivateSubnetRouteAssos2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref DatagrokPrivateSubnetRouteTable
      SubnetId: !Ref DatagrokPrivateSubnet2

  DatagrokDataSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Datagrok Data Subnet Route Table
        - Key: datagrok.component
          Value: rds
      VpcId: !Ref DatagrokVPC

  DatagrokDataSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select
        - 4
        - !Cidr
          - !GetAtt DatagrokVPC.CidrBlock
          - 6
          - 6
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Datagrok Data Subnet 1
        - Key: datagrok.component
          Value: rds
      VpcId: !Ref DatagrokVPC
      AvailabilityZone: !Select
        - 0
        - !GetAZs
          Ref: AWS::Region

  DatagrokDataSubnetRouteAssos1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref DatagrokDataSubnetRouteTable
      SubnetId: !Ref DatagrokDataSubnet1

  DatagrokDataSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select
        - 5
        - !Cidr
          - !GetAtt DatagrokVPC.CidrBlock
          - 6
          - 6
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Datagrok Data Subnet 2
        - Key: datagrok.component
          Value: rds
      VpcId: !Ref DatagrokVPC
      AvailabilityZone: !Select
        - 1
        - !GetAZs
          Ref: AWS::Region

  DatagrokDataSubnetRouteAssos2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref DatagrokDataSubnetRouteTable
      SubnetId: !Ref DatagrokDataSubnet2

  DatagrokS3VPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Action:
              - s3:PutObject
              - s3:GetObject
              - s3:DeleteObject
              - s3:ListBucket
            Effect: Allow
            Principal: '*'
            Condition: {}
            Resource:
              - !GetAtt DatagrokS3.Arn
              - !Sub
                - ${bucket}/*
                - bucket: !GetAtt DatagrokS3.Arn
              - !Sub arn:aws:s3:::amazonlinux.${AWS::Region}.amazonaws.com
              - !Sub arn:aws:s3:::amazonlinux.${AWS::Region}.amazonaws.com/*
              - !Sub arn:aws:s3:::amazonlinux-2-repos-${AWS::Region}
              - !Sub arn:aws:s3:::amazonlinux-2-repos-${AWS::Region}/*
              - !Sub arn:aws:s3:::prod-${AWS::Region}-starport-layer-bucket
              - !Sub arn:aws:s3:::prod-${AWS::Region}-starport-layer-bucket/*
              - arn:aws:s3:::docker-images-prod
              - arn:aws:s3:::docker-images-prod/*
              - arn:aws:s3:::datagrok-data
              - arn:aws:s3:::datagrok-data/*
              - !Sub
                - arn:aws:s3:::cloudformation-custom-resource-response-${region}
                - region: !Join
                    - ""
                    - !Split
                      - '-'
                      - !Ref AWS::Region
              - !Sub
                - arn:aws:s3:::cloudformation-custom-resource-response-${region}/*
                - region: !Join
                    - ""
                    - !Split
                      - '-'
                      - !Ref AWS::Region
      RouteTableIds:
        - !Ref DatagrokPrivateSubnetRouteTable
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcEndpointType: Gateway
      VpcId: !Ref DatagrokVPC
